--- a/user/build.gradle
+++ b/user/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
 	implementation 'com.auth0:java-jwt:4.0.0'
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
